# qpdftools

./: .gitignore  CMakeLists.txt  build.py  windows_build_plan.md  windows_cross_compile.md
.github/workflows/: build.yml
cline_docs/: CMakeLists_instructions.txt  activeContext.md  app_rc_instructions.txt  build_py_instructions.txt  changelog.md  dependency_tracker.md  deps_README_instructions.txt  externalSoftware_cpp_instructions.txt  externalSoftware_hpp_instructions.txt  ghostscript_cpp_instructions.txt  github_workflow_instructions.txt  productContext.md  projectbrief.md  qpdf_cpp_instructions.txt  resources_CMakeLists_instructions.txt  root_main_instructions.txt  src_CMakeLists_instructions.txt
resources/: CMakeLists.txt
resources/windows/: app.ico.placeholder  app.rc  generate_ico.sh  ghostscript_integration.nsh
src/: CMakeLists.txt  main.cpp
src/api/: externalSoftware.cpp  externalSoftware.hpp  ghostscript.cpp  qpdf.cpp  qpdf.hpp
